# rust-backend-template

./: .env  Cargo.toml  LICENSE  README.md
migrations/2020-06-28-104940_create_users/: up.sql
src/: main.rs  schema.rs
src/api/: mod.rs
src/api/catchers/: mod.rs
src/api/fairings/: cors.rs
src/api/guards/: auth.rs
src/api/misc/: structs.rs
src/api/routes/: mod.rs  user.rs
src/core/user/: diesel.rs  entity.rs  mod.rs  repository.rs  service.rs
src/utils/: db.rs  errors.rs
