[package]
name = "rust-backend-template"
version = "0.1.0"
authors = ["supercmmetry <vishaals2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.4.4", default-features = false}
rocket_contrib = "0.4.4"
rocket_cors = "0.5.2"
diesel = {version = "1.4.4", features = ["postgres", "r2d2", "chrono"]}
diesel_migrations = "1.4.0"
bcrypt = "0.8.0"
serde = "1.0.110"
serde_json = "1.0.53"
serde_derive = "1.0.111"
chrono = {version="0.4.11", features=["serde"]}
jsonwebtoken = "7.1.0"
dotenv = "0.15.0"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
anyhow = "1.0.31"